# ugy-SDK-Mods

./: README.md
BL1/Better Carnage SDK/: Readme.md
BL1/Better Carnage SDK/JVF_SDK/: pyproject.toml
BL1/Better Carnage SDK/JVF_SDK/WillowGame/CookedPC/DLC/JakobsVendorSDK/: dlc1_gd_itempools_shop_Jakobs.upk
BL1/Better Carnage SDK/JVF_SDK/sdk_mods/: Jakobs_Vendor_Fix.sdkmod
BL1/Better Carnage SDK/JVF_SDK/sdk_mods/Jakobs_Vendor_Fix/: __init__.py
BL1/Better Carnage SDK/sdk_mods/BetterCarnage/: __init__.py  pyproject.toml
BL1/Jakobs Vendor Fix SDK/: pyproject.toml
BL1/Jakobs Vendor Fix SDK/WillowGame/CookedPC/DLC/JakobsVendorSDK/: ugy_fjv_itemgrades.upk
BL1/Jakobs Vendor Fix SDK/sdk_mods/: Jakobs_Vendor_Fix.sdkmod
BL1/Jakobs Vendor Fix SDK/sdk_mods/Jakobs_Vendor_Fix/: pyproject.toml
BL1/Jakobs Vendor Fix SDK_NoGL/: pyproject.toml
BL1/Jakobs Vendor Fix SDK_NoGL/WillowGame/CookedPC/DLC/JakobsVendorSDK/: dlc1_gd_itempools_shop_Jakobs.upk
BL1/Jakobs Vendor Fix SDK_NoGL/sdk_mods/: Jakobs_Vendor_Fix.sdkmod
