[project]
name = "Jakobs Vendor Fix"
version = "1.4.0"
authors = [{ name = "ugyuu, SleepMaster, BioHazardAlbatross" }]
description = """\
Fixes the Jakobs vendor in the Zombie Ned DLC!
- No longer breaks after completing the mission
- ONLY sells Jakobs guns and class mods
- More items for sale (15 + Item of the Day!)
- Higher quality items (AwesomeLevel)
- Scales to your level (mostly)
- Jakobs ClapTrap talks more often (oops)
Credits:
SleepMaster: Creating a lovely new custom Jakobs vendor UI
BioHazardAlbatross: Porting the mod to SDK
"""
[tool.sdkmod]
name = "Jakobs Vendor Fix"
mod_type = "Standard"
supported_games = ["BL1","BL1E"]
coop_support = "RequiresAllPlayers"
auto_enable = true
download = "https://github.com/Ugyuu/ugy-SDK-Mods/raw/refs/heads/main/BL1/Jakobs%20Vendor%20Fix%20SDK/JVF_SDK.zip"
license = {name = "LGPL3", url = "https://choosealicense.com/licenses/lgpl-3.0/" }
