[project]
name = "Better Carnage Shotguns"
version = "1.1"
authors = [{ name = "ugyuu" }]
description = """\
Buffs Carnage-type shotguns and uniques such as the Boomstick.
+2 projectiles;
Increased rocket speed;
Deals Grenade damage;
Stat balancing;
etc.
"""

[tool.sdkmod]
name = "Better Carnage Shotguns"
mod_type = "Standard" # or "Library"
supported_games = ["BL1"]
coop_support = "RequiresAllPlayers"
license = {name = "LGPL3", url = "https://www.gnu.org/licenses/lgpl-3.0.en.html" }
